[package]
name = "wol-rs"
version = "0.1.0"
authors = ["ekuinox <depkey@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.1"
clap = "2.33.3"
anyhow = "1.0.35"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.7"
