[package]
name = "wol-rs"
version = "0.1.2"
authors = ["ekuinox <depkey@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.1"
clap = { version = "4", features = ["derive"]}
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
