[package]
name = "wol-rs"
version = "0.1.3"
authors = ["ekuinox <depkey@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
mac_address = "1.1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
